--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,6 @@ jobs:
 
         - name: Run Prettier Check
           run: npm run prettier
+
+        - name: Run Vulnerabilities
+          run: npm audit
